# knowledge-helper

./: .gitignore  main.py  pyproject.toml  test_rag.py
backend/: .env  download_report.json  requirements.txt  test.py
backend/app/: __init__.py  agent.py  code_analyzer.py  code_downloader.py  deps.py  ingestion.py  interview.py  interview_sandbox.py  main.py  review.py  storage.py  utils.py
backend/bilisub_output/BV1NBwWzaEG8/: BV1NBwWzaEG8.srt
backend/mineru_ocr/: __init__.py  common.py  kie.py
backend/workflow/: qa_router.py
backend/xhs_downloader/: __init__.py
backend/xhs_downloader/application/: app.py  image.py  video.py
backend/xhs_downloader/expansion/: browser.py  cleaner.py
backend/xhs_downloader/module/: manager.py
config/: interview.yaml  llm.yaml  ocr.yaml  xhs.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/ui/: EmptyState.jsx  MarkdownMessage.jsx  SectionIntro.jsx  StatusPill.jsx
frontend/src/features/interview/: constants.js  index.js
frontend/src/features/interview/components/: InterviewAnalyzePanel.jsx  InterviewConversation.jsx  InterviewQuestionList.jsx  InterviewSessionPanel.jsx
frontend/src/features/interview/hooks/: useInterviewAssistant.js
frontend/src/features/interview/lib/: sse.js
frontend/src/lib/: classNames.js
tests/: test_ocr.py
