[project]
name = "knowledge-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "bilibili-api-python>=17.4.1",
    "chromadb>=1.5.5",
    "databases>=0.9.0",
    "docx2txt>=0.9",
    "email-validator>=2.3.0",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "openai-whisper>=20250625",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-utils>=0.42.1",
    "starlette>=1.0.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.42.0",
]
